<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menuRoot"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity"
    android:gravity="center"
    android:background="@drawable/panel_vertical" >

    <TextView
        android:id="@+id/txGameTitle"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        style="@style/buttonText"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:layout_marginLeft="24dp" 
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp" />
    
    <Button
        android:id="@+id/btnClearProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_progress"
        style="@style/buttonText"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:layout_marginLeft="24dp" 
        android:layout_marginRight="24dp"
        android:layout_marginBottom="32dp" />
    
    <Button
        android:id="@+id/btnLevelSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_select"
        style="@style/buttonText"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:layout_marginLeft="24dp" 
        android:layout_marginRight="24dp" 
        android:layout_marginBottom="32dp" />
    
    <Button
        android:id="@+id/btnLevelEditor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_editor"
        style="@style/buttonText"
        android:textSize="24sp"
        android:background="@drawable/button"
        android:layout_marginLeft="24dp" 
        android:layout_marginRight="24dp" />

</LinearLayout>
