<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CC777777"
    android:shadowColor="#CCCCCCCC"
    android:shadowDx="0"
    android:shadowDy="0"
    android:shadowRadius="40"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp" >

    <TextView
        android:id="@+id/txTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_failed"
        android:gravity="center"
        android:textColor="#0000DD"
        android:textSize="36sp"
        android:shadowColor="#000077"
        android:shadowDx="0.01"
        android:shadowDy="0.01"
        android:shadowRadius="20"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="#666666"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="0.01"
        android:text="@string/too_many_steps"
        android:textColor="#AAAAAA"
        android:textSize="24sp"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnFailedRetry"
            style="@style/buttonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/retry" />

        <Button
            android:id="@+id/btnFailedMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu"
            android:background="@drawable/button"
            style="@style/buttonText"
            android:layout_margin="6dp" />

    </LinearLayout>

</LinearLayout>
